--- a/pom.xml
+++ b/pom.xml
@@ -53,10 +53,15 @@
 			<url>http://deadmandungeons.com/artifactory/libs-release-local</url>
 		</repository>
 		<repository>
+			<id>spigot-repo</id>
+			<url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
+		</repository>
+		<repository>
 			<id>sk89q-repo</id>
 			<url>http://maven.sk89q.com/repo/</url>
 		</repository>
 	</repositories>
+	
 	<dependencies>
 		
 		<dependency>
@@ -71,13 +76,40 @@
 			<version>1.0.0</version>
 		</dependency>
 		
-		<!-- 
+		<dependency>
+			<groupId>org.deadmandungeons</groupId>
+			<artifactId>deadman-plugin</artifactId>
+			<version>1.2.1</version>
+			<scope>provided</scope>
+		</dependency>
+		
+		<dependency>
+			<groupId>org.bukkit</groupId>
+			<artifactId>bukkit</artifactId>
+			<version>1.8.8-R0.1-SNAPSHOT</version>
+			<scope>provided</scope>
+		</dependency>
+		
 		<dependency>
 			<groupId>com.sk89q</groupId>
 			<artifactId>worldguard</artifactId>
 			<version>6.1</version>
+			<scope>provided</scope>
 		</dependency>
-		 -->
+		
+		<dependency>
+			<groupId>io.netty</groupId>
+			<artifactId>netty-all</artifactId>
+			<version>4.0.31.Final</version>
+			<scope>provided</scope>
+		</dependency>
+		
+		<dependency>
+			<groupId>com.google.code.gson</groupId>
+			<artifactId>gson</artifactId>
+			<version>2.3.1</version>
+			<!-- <scope>provided</scope> -->
+		</dependency>
 		
 	</dependencies>
 	
