--- a/plugin.yml
+++ b/plugin.yml
@@ -4,7 +4,7 @@ version: 1.0.0
 author: Weasel_Squeezer
 website: http://www.deadmandungeons.com
 
-depend: [DeadmanPlugin, WorldGuard, WorldEdit]
+depend: [DeadmanPlugin, WorldGuard, WorldEdit, WGCustomFlags]
 
 commands:
     ac:
@@ -34,3 +34,13 @@ permissions:
             audioconnect.admin.reload: true
             audioconnect.admin.list: true
             audioconnect.admin.send: true
+    audioconnect.user.*:
+        default: true
+        description: Gives access to all AudioConnect user permissions
+        children:
+            audioconnect.user.all: true
+    audioconnect.user.all:
+        default: true
+        description: Gives access to all AudioConnect user permissions
+        children:
+            audioconnect.user.connect: true
