--- a/pom.xml
+++ b/pom.xml
@@ -60,14 +60,28 @@
 			<id>sk89q-repo</id>
 			<url>http://maven.sk89q.com/repo/</url>
 		</repository>
+		<repository>
+			<id>mewin-repo</id>
+			<url>http://maven.elmakers.com/repository/</url>
+		</repository>
 	</repositories>
 	
 	<dependencies>
 		
 		<dependency>
 			<groupId>com.deadmandungeons</groupId>
-			<artifactId>connect-messenger</artifactId>
+			<artifactId>connect-commons</artifactId>
 			<version>1.0.0</version>
+			<exclusions>
+				<exclusion>
+					<groupId>com.google.code.gson</groupId>
+					<artifactId>gson</artifactId>
+				</exclusion>
+				<exclusion>
+					<groupId>com.google.guava</groupId>
+					<artifactId>guava</artifactId>
+				</exclusion>
+			</exclusions>
 		</dependency>
 		
 		<dependency>
@@ -79,7 +93,7 @@
 		<dependency>
 			<groupId>org.deadmandungeons</groupId>
 			<artifactId>deadman-plugin</artifactId>
-			<version>1.2.1</version>
+			<version>1.8.0</version>
 			<scope>provided</scope>
 		</dependency>
 		
@@ -98,6 +112,13 @@
 		</dependency>
 		
 		<dependency>
+			<groupId>com.mewin</groupId>
+			<artifactId>WGCustomFlags</artifactId>
+			<version>1.8.1-beta</version>
+			<scope>provided</scope>
+		</dependency>
+		
+		<dependency>
 			<groupId>io.netty</groupId>
 			<artifactId>netty-all</artifactId>
 			<version>4.0.31.Final</version>
@@ -108,7 +129,7 @@
 			<groupId>com.google.code.gson</groupId>
 			<artifactId>gson</artifactId>
 			<version>2.3.1</version>
-			<!-- <scope>provided</scope> -->
+			<scope>provided</scope>
 		</dependency>
 		
 	</dependencies>
