Updates DeadmanPlugin and DeadmanData versions with com.deadmandungeons package name update

--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.deadmandungeons</groupId>
 	<artifactId>audio-connect</artifactId>
-	<version>1.0.1</version>
+	<version>1.0.2</version>
 	<name>AudioConnect</name>
 	
 	<build>
@@ -91,16 +91,16 @@
 		</dependency>
 		
 		<dependency>
-			<groupId>org.deadmandungeons</groupId>
+			<groupId>com.deadmandungeons</groupId>
 			<artifactId>deadman-plugin</artifactId>
-			<version>1.8.0</version>
+			<version>1.8.2</version>
 			<scope>provided</scope>
 		</dependency>
 		
 		<dependency>
 			<groupId>org.bukkit</groupId>
 			<artifactId>bukkit</artifactId>
-			<version>1.9-R0.1-SNAPSHOT</version>
+			<version>1.9.4-R0.1-SNAPSHOT</version>
 			<scope>provided</scope>
 		</dependency>
 		
