Update to for 1.1.0 of AudioConnectWeb and AudioConnectMessages
Implements AudioTrack to utilize new AudioTrackMessage to define the target tracks for concurrent audio.
Implements AudioList to utilize new AudioListMessage to keep track of available audio IDs
Adds AudioTrackFlag and AudioDelayFlag types replace previous SetFlag and StringFlag types to improve flag handling.
Improves Config usage by providing AudioConnectConfig interface for abstraction of implementation.
Improves efficiency of creating and writing of audio messages.

--- a/config.yml
+++ b/config.yml
@@ -39,3 +39,23 @@ options:
   command-cooldown: 5
   # The frequency (in seconds) of audio connect announcement with connection URL for non-connected players. -1 for no announcements
   announce-frequency: 2700
+
+audio-tracks:
+# <track-name>
+#   default: <true|false>
+#   repeating: <true|false>
+#   random: <true|false>
+#   fading: <true|false>
+  primary:
+    default: true
+    repeating: true
+    random: true
+    fading: true
+  background:
+    repeating: true
+    random: true
+    fading: false
+  complementary:
+    repeating: false
+    random: false
+    fading: false
