--- a/pom.xml
+++ b/pom.xml
@@ -3,11 +3,12 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.deadmandungeons</groupId>
 	<artifactId>audio-connect</artifactId>
-	<version>1.0.5</version>
+	<version>1.1.0</version>
 	<name>AudioConnect</name>
 	
 	<build>
 		<sourceDirectory>src</sourceDirectory>
+		<finalName>AudioConnect</finalName>
 		
 		<resources>
 			<resource>
@@ -63,11 +64,11 @@
 	</repositories>
 	
 	<dependencies>
-		
+
 		<dependency>
 			<groupId>com.deadmandungeons</groupId>
-			<artifactId>connect-commons</artifactId>
-			<version>1.0.0</version>
+			<artifactId>audio-connect-messages</artifactId>
+			<version>1.1.0</version>
 			<exclusions>
 				<exclusion>
 					<groupId>com.google.code.gson</groupId>
@@ -82,14 +83,8 @@
 		
 		<dependency>
 			<groupId>com.deadmandungeons</groupId>
-			<artifactId>audio-connect-messages</artifactId>
-			<version>1.0.0</version>
-		</dependency>
-		
-		<dependency>
-			<groupId>com.deadmandungeons</groupId>
 			<artifactId>deadman-plugin</artifactId>
-			<version>1.8.5</version>
+			<version>1.8.7</version>
 			<scope>provided</scope>
 		</dependency>
 		
