--- a/pom.xml
+++ b/pom.xml
@@ -96,14 +96,15 @@
 		</dependency>
 		
 		<dependency>
-			<!-- Use this once Worldguard 6.1.3 is released
-			<groupId>com.sk89q</groupId>
-			<artifactId>worldguard</artifactId>
-			<version>6.1.3</version>
-			 -->
 			<groupId>com.sk89q.worldguard</groupId>
 			<artifactId>worldguard-legacy</artifactId>
-			<version>6.1.3-20160615.013402-1</version>
+			<version>6.2</version>
+			<scope>provided</scope>
+		</dependency>
+		<dependency>
+			<groupId>com.sk89q.worldedit</groupId>
+			<artifactId>worldedit-bukkit</artifactId>
+			<version>6.1.3-SNAPSHOT</version>
 			<scope>provided</scope>
 		</dependency>
 		
