Adds "audio" and "music" as aliases to base "ac" command

--- a/plugin.yml
+++ b/plugin.yml
@@ -8,6 +8,7 @@ depend: [DeadmanPlugin, WorldGuard]
 
 commands:
     ac:
+        aliases: [audio, music]
         description: AudioConnect command prefix. Use "/ac help" to see all the AudioConnect commands you can use.
     music:
         description: Alias for /ac connect
