--- a/plugin.yml
+++ b/plugin.yml
@@ -8,9 +8,9 @@ depend: [DeadmanPlugin, WorldGuard]
 
 commands:
     ac:
-        aliases: [audio, music]
         description: AudioConnect command prefix. Use "/ac help" to see all the AudioConnect commands you can use.
-    music:
+    audio:
+        aliases: [music]
         description: Alias for /ac connect
     mute:
         description: Alias for /ac mute
