Updates pom.xml to restore master and dist branch separation

--- a/pom.xml
+++ b/pom.xml
@@ -43,12 +43,6 @@
 				</executions>
 				<configuration>
 					<minimizeJar>false</minimizeJar>
-					<relocations>
-						<relocation>
-							<pattern>com.deadmandungeons.deadmanplugin</pattern>
-							<shadedPattern>com.deadmandungeons.audioconnect.deadmanplugin</shadedPattern>
-						</relocation>
-					</relocations>
 				</configuration>
 			</plugin>
 		</plugins>
@@ -91,6 +85,7 @@
 			<groupId>com.deadmandungeons</groupId>
 			<artifactId>deadman-plugin</artifactId>
 			<version>1.8.11</version>
+			<scope>provided</scope>
 		</dependency>
 		
 		<dependency>
