--- a/config.yml
+++ b/config.yml
@@ -35,6 +35,9 @@ connection:
     # The port of the AudioConnect websocket endpoint
     websocket-port: 3030
 
+    # The port of the AudioConnect webapp endpoint
+    webapp-port: 80
+
     # The path of the AudioConnect webapp endpoint
     webapp-path: /
 
