--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,16 @@
-*.class
+# Eclipse
 .classpath
+.project
 .settings/
-build.properties
-/bin
-/target
+
+# Intellij
+.idea/
+*.iml
+*.iws
+
+# Mac
+.DS_Store
+
+# Maven
+log/
+target/
