--- a/pom.xml
+++ b/pom.xml
@@ -3,12 +3,10 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.deadmandungeons</groupId>
     <artifactId>audio-connect</artifactId>
-    <version>1.2.8</version>
+    <version>1.2.8-CB_1.8</version>
     <name>AudioConnect</name>
 
     <build>
-        <finalName>AudioConnect</finalName>
-
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -64,11 +62,11 @@
         <dependency>
             <groupId>com.deadmandungeons</groupId>
             <artifactId>audio-connect-messages</artifactId>
-            <version>1.2.0</version>
+            <version>1.2.0-CB_1.8</version>
             <exclusions>
                 <exclusion>
                     <groupId>com.google.code.gson</groupId>
-                    <artifactId>gson</artifactId>
+                    <artifactId>gson-craftbukkit</artifactId>
                 </exclusion>
                 <exclusion>
                     <groupId>com.google.guava</groupId>
