Implemented configurable localization and added French translation

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -64,6 +64,10 @@ reconnect:
 
 # Configure other various plugin options
 options:
+  # The locale language code to use for messages.
+  # Supported locales: 'en' (english), 'de' (german), 'fr' (french)
+  locale: 'en'
+
   # The Amount of time in seconds from the last executed command.
   # Prevents a player from executing any AudioConnect command too quickly.
   command-cooldown: 5
